--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,15 @@
 <head>
     <link href="css/style.css" rel="stylesheet"/>
 
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script
+            src="http://code.jquery.com/ui/1.12.0/jquery-ui.min.js"
+            integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
+            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-    <script src="../js/angular.js"></script>
-    <script src="../js/angular-route.js"></script>
+    <script src="js/angular.js"></script>
+    <script src="js/angular-route.js"></script>
     <script src="js/app.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <meta charset="UTF-8">
@@ -19,7 +25,7 @@
     <div class="container-fluid">
         <h2 class="white-color">
             <div class="right-side-glyphicon">
-                <a ng-click="instructions()">
+                <a ng-click="instructionVisibility()">
                     <span title="Instructions" class="glyphicon glyphicon-info-sign"></span>
                 </a>
                 <a ng-click="model.init()">
@@ -40,25 +46,35 @@
 <div class="col-xs-8">
 
     <!-- instructions -->
-    <div id="instructions" style="display:none;" class="instructions">
-        These are the instructions:
-        blalslkjfalsdf
-        asdfkjasdflajsdf
+    <script>
+        $( function() {
+            $( "#instructions" ).draggable();
+        } );
+    </script>
+    <div id="instructions" ng-show="instructionVisible">
+        <h2>Welcome to Nancy's Hangman</h2>
+        <ul>
+            <li>Select letters by clicking the letter buttons</li>
+            <li>You may guess up to nine incorrect letters</li>
+            <li>Top right corner lets you restart and read instructions</li>
+            <h3>Good luck!</h3>
+            <a ng-click="instructionVisibility()" class="btn btn-primary">Okay</a>
+        </ul>
     </div>
 
 
-    <div class="container-fluid">
+    <div>
 
         <!-- alphabet -->
-        <div class="alphabetBox">
+        <div class="alphabetBox" class="container-fluid">
             <ul>
-                <li class="alphabet" ng-repeat="x in alphabet" ng-click="letterClicked($index)">{{x}}</li>
+                <li ng-class="{'active':$index == letterClickedIndex}" class="alphabet" ng-repeat="x in alphabet" ng-click="letterClicked($index)">{{x}}</li>
             </ul>
         </div>
 
 
         <!-- wording -->
-        <div class="centered">
+        <div class="centered" class="container-fluid">
                 <div class="spaces" ng-repeat="y in space track by $index">{{y}}</div>
         </div>
 
@@ -69,9 +85,11 @@
 <!-- HANING MAN -->
 <div class="col-xs-4">
     <div class="container-fluid">
-        <div class="wrongGuesses">
-            Wrong Guesses: {{wrongGuesses}} out of 10
+        <div class="wrongGuesses" >
+            Wrong Guesses: {{wrongGuesses}} out of 9
+            <br/>Wrong Letters: {{arrayToString(wrongLetter)}}
         </div>
+
 
         <div class="center">
             <canvas id="myCanvas" width="200" height="180" style="border:1px solid #d3d3d3;">
