--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
             src="http://code.jquery.com/ui/1.12.0/jquery-ui.min.js"
             integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
             crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <!--<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>-->
     <script src="js/angular.js"></script>
     <script src="js/angular-route.js"></script>
     <script src="js/app.js"></script>
@@ -75,7 +75,9 @@
             </ul>
         </div>
 
-
+        <div ng-show="alreadyGuessedLetter" class="alert alert-danger" role="alert">
+            {{alreadyGuessedLetter}}
+        </div>
 
 
 
@@ -90,9 +92,12 @@
 
 <!-- HANGING MAN -->
 <div class="col-xs-4">
+
     <div class="container-fluid">
+        Loses: {{loses}}
+        Wins: {{wins}}
         <div class="wrongGuesses" >
-            Wrong Guesses: {{wrongGuesses}} out of 9
+            Wrong Guesses: {{wrongGuesses}} out of 10
             <br/>Wrong Letters: {{arrayToString(wrongLetter)}}
         </div>
 
