trying to fix http problem on heroku

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,9 @@
     <link href="css/style.css" rel="stylesheet"/>
     <script src="js/jquery-3.1.1.min.js"></script>
     <script
-            src="http://code.jquery.com/ui/1.12.0/jquery-ui.min.js"
+            src="//code.jquery.com/ui/1.12.0/jquery-ui.min.js"
             integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
             crossorigin="anonymous"></script>
-    <!--<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>-->
     <script src="js/angular.js"></script>
     <script src="js/angular-route.js"></script>
     <script src="js/app.js"></script>
