--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="hangmanApp">
 <head>
+    <!--<script type='text/javascript' src='ngPopup.js'></script>-->
+    <!--<script src="https://rawgit.com/dwmkerr/angular-modal-service/master/dst/angular-modal-service.js"></script>-->
+
+
     <link href="css/style.css" rel="stylesheet"/>
     <script src="js/jquery-3.1.1.min.js"></script>
     <script
             src="//code.jquery.com/ui/1.12.0/jquery-ui.min.js"
             integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
             crossorigin="anonymous"></script>
+
+
+
     <script src="js/angular.js"></script>
     <script src="js/angular-route.js"></script>
-    <script src="js/app.js"></script>
+    <script src="https://rawgit.com/dwmkerr/angular-modal-service/master/dst/angular-modal-service.js"></script>
+
+    <script src="app.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="js/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+    <!--<script src="../node_modules/angular-modal-service/dst/angular-modal-service.min.js"></script>-->
+
     <meta charset="UTF-8">
+    <!--<script src="../test/testApp.js"></script>-->
     <title>Hangman Page</title>
+
+
+
+
+
 </head>
 
 
@@ -76,7 +95,7 @@
         </div>
 
         <!-- ERROR MESSAGE FOR ALREADY CHOSEN LETTTER -->
-        <div ng-show="alreadyGuessed" class="alert alert-danger" role="alert">
+        <div ng-show="alreadyGuessed" class="alert alert-danger" class='overlay' role="alert">
             {{letterAlreadyGuessed}}
         </div>
 
