--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
 
     <script src="app.js"></script>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 
     <meta charset="UTF-8">
@@ -28,7 +30,7 @@
 
 
 
-<body ng-controller="hangmanController" ng-app="hangmanApp">
+<body ng-controller="hangmanController as model" ng-app="hangmanApp">
 
 <!-- Header -->
 <div class="sticky-header">
@@ -36,7 +38,7 @@
         <h2 class="white-color">
             <div class="right-side-glyphicon">
 
-                <a ng-click="startGame()">
+                <a ng-click="model.startGame()">
                     <span title="Restart" class="glyphicon glyphicon-repeat"></span>
                 </a>
 
@@ -53,21 +55,21 @@
 
 <!-- INSTRUCTIONS -->
 <div>
-    <div id="instructions" draggables="" ng-show="instructionVisible">
+    <div id="instructions" draggables="" ng-show="model.instructionVisible">
         <h2>Welcome to Nancy's Hangman</h2>
         <ul>
             <li>Select letters by clicking the letter buttons</li>
             <li>You may guess up to ten incorrect letters</li>
             <li>Top right corner lets you restart</li>
-            <div ng-show="usernameTaken" class="alert alert-danger" role="alert">
-                {{usernameTakenMSG}}
+            <div ng-show="model.usernameTaken" class="alert alert-danger" role="alert">
+                {{model.usernameTakenMSG}}
             </div>
             Please enter a new username below to create game
-            <input ng-model="newUsername" type="text" class="form-control">
+            <input ng-model="model.newUsername" type="text" class="form-control">
             Please enter an existing username below to retrieve game
-            <input ng-model="oldUsername" type="text" class="form-control">
+            <input ng-model="model.oldUsername" type="text" class="form-control">
             <h3>Good luck!</h3>
-            <a ng-click="startGame()" class="btn btn-primary">Okay</a>
+            <a ng-click="model.startGame()" class="btn btn-primary">Okay</a>
         </ul>
     </div>
 
@@ -80,20 +82,20 @@
         <!-- alphabet -->
         <div class="container-fluid">
             <ul>
-                <li ng-class="{'active':$index == letterClickedIndex}" class="alphabet" ng-repeat="x in alphabet" ng-click="letterClicked($index, $event)">
+                <li ng-class="{'active':$index == model.letterClickedIndex}" class="alphabet" ng-repeat="x in model.alphabet" ng-click="model.letterClicked($index, $event)">
                     {{x}}
                 </li>
             </ul>
         </div>
 
         <!-- ERROR MESSAGE FOR ALREADY CHOSEN LETTTER -->
-        <div ng-show="alreadyGuessed" class="alert alert-danger" class='overlay' role="alert">
-            {{letterAlreadyGuessed}}
+        <div ng-show="model.alreadyGuessed" class="alert alert-danger" class='overlay' role="alert">
+            {{model.letterAlreadyGuessed}}
         </div>
 
         <!-- wording -->
         <div class="centered" class="container-fluid">
-                <div class="spaces" ng-repeat="y in space track by $index">{{y}}</div>
+                <div class="spaces" ng-repeat="y in model.space track by $index">{{y}}</div>
         </div>
 
     </div>
@@ -104,11 +106,11 @@
 <div class="col-xs-4">
 
     <div class="container-fluid">
-        Loses: {{loses}}
-        Wins: {{wins}}
+        Loses: {{model.loses}}
+        Wins: {{model.wins}}
         <div class="wrongGuesses" >
-            Wrong Guesses: {{wrongGuesses}} out of 10
-            <br/>Wrong Letters: {{wrongLetter}}
+            Wrong Guesses: {{model.wrongGuesses}} out of 10
+            <br/>Wrong Letters: {{model.wrongLetter}}
         </div>
 
         <div class="center">
